interaction code refactoring